--- a/package.json
+++ b/package.json
@@ -3,18 +3,34 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.0",
+    "aws-amplify": "^4.3.13",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
+    "react-responsive": "^9.0.0-beta.6",
+    "react-text-truncate": "^0.17.0",
+    "react-truncate-markup": "^5.1.0",
+    "styled-components": "^5.3.3",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@types/react-text-truncate": "^0.14.1",
+    "@types/styled-components": "^5.1.21",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
