--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.4.0",
     "aws-amplify": "^4.3.13",
     "bootstrap": "^5.1.3",
+    "contentful": "^9.1.6",
     "formik": "^2.2.9",
     "next": "12.0.10",
     "react": "^17.0.2",
