--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@auth0/nextjs-auth0": "^1.7.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "aws-amplify": "^4.3.13",
     "bootstrap": "^5.1.3",
@@ -18,10 +19,12 @@
     "formik": "^2.2.9",
     "next": "12.0.10",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
+    "react-share": "^4.4.0",
     "react-text-truncate": "^0.17.0",
     "react-truncate-markup": "^5.1.0",
     "styled-components": "^5.3.3",
