--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
     "react-share": "^4.4.0",
+    "react-social-icons": "^5.10.0",
     "react-text-truncate": "^0.17.0",
     "react-truncate-markup": "^5.1.0",
     "styled-components": "^5.3.3",
