--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@auth0/nextjs-auth0": "^1.7.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "aws-amplify": "^4.3.13",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.6",
+    "contentful-management": "^7.53.0",
     "formik": "^2.2.9",
     "next": "12.0.10",
     "react": "^17.0.2",
@@ -27,6 +32,7 @@
     "react-share": "^4.4.0",
     "react-social-icons": "^5.10.0",
     "react-text-truncate": "^0.17.0",
+    "react-toastify": "^8.1.1",
     "react-truncate-markup": "^5.1.0",
     "styled-components": "^5.3.3",
     "swr": "^1.2.1"
