--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.1.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
