--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "formik": "^2.2.9",
     "next": "12.0.10",
     "react": "^17.0.2",
-    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.1.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.8.2",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
     "react-share": "^4.4.0",
