--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.1.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-facebook-pixel": "^1.0.4",
     "react-h5-audio-player": "^3.8.2",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
