--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@walletconnect/web3-provider": "^1.7.1",
+    "@web3auth/web3auth": "^0.3.2",
+    "antd": "^4.18.8",
     "aws-amplify": "^4.3.13",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.6",
     "contentful-management": "^7.53.0",
     "formik": "^2.2.9",
+    "magic-sdk": "7.0.0",
+    "moralis": "^1.3.2",
     "next": "12.0.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -29,8 +34,10 @@
     "react-dom": "^17.0.2",
     "react-facebook-pixel": "^1.0.4",
     "react-h5-audio-player": "^3.8.2",
+    "react-moralis": "^1.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
+    "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-slideshow-image": "^3.7.0",
     "react-social-icons": "^5.10.0",
