--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.3.2",
     "antd": "^4.18.8",
+    "api": "^4.2.0",
     "aws-amplify": "^4.3.13",
+    "aws-sdk": "^2.1082.0",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.6",
     "contentful-management": "^7.53.0",
@@ -29,11 +31,13 @@
     "moralis": "^1.3.2",
     "next": "12.0.10",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.1.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-facebook-pixel": "^1.0.4",
     "react-h5-audio-player": "^3.8.2",
+    "react-jinke-music-player": "^4.24.2",
     "react-moralis": "^1.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.6",
@@ -45,11 +49,14 @@
     "react-toastify": "^8.1.1",
     "react-truncate-markup": "^5.1.0",
     "styled-components": "^5.3.3",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "web3": "^1.7.0",
+    "web3-eth-contract": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@types/react-blockies": "^1.4.1",
     "@types/react-text-truncate": "^0.14.1",
     "@types/styled-components": "^5.1.21",
     "eslint": "8.8.0",
