--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^17.0.2",
     "react-facebook-pixel": "^1.0.4",
     "react-h5-audio-player": "^3.8.2",
+    "react-idle-timer": "^4.6.4",
     "react-jinke-music-player": "^4.24.2",
     "react-moralis": "^1.3.1",
     "react-multi-carousel": "^2.6.5",
